--- a/index.qmd
+++ b/index.qmd
@@ -6,13 +6,13 @@ lightbox: auto
 toc: false
 ---
 
-## Save the date
+## Save the Date
 
 **Data:** 14/10/2023 às 10h00
 
 Em breve mais informações sobre o casamento da Bea e do Ju!
 
-## Cerimônia e festa
+## Cerimônia e Festa
 
 A cerimônia e a festa de casamento acontecerão no Sítio São Jorge - Demarchi, que fica em São Bernardo do Campo - SP.
 
