--- a/lista-de-presentes.qmd
+++ b/lista-de-presentes.qmd
@@ -10,7 +10,10 @@ knitr:
 toc: false
 ---
 
-```{r}
+Esta lista de presentes é uma lista com alguns produtos fictícios, onde cada um deles representa um valor que será convertido em dinheiro. Usaremos o dinheiro para comprar os itens descritos na lista, porém seguindo uma ordem de prioridade (por exemplo: uma geladeira é mais importante que um curso, etc).
+
+
+```{r include=FALSE}
 url_sheets <- "https://docs.google.com/spreadsheets/d/1_VsPKJZ6wz2HvabvGI6V-oW-1923KE_FyfKsvy-T2yc/edit#gid=0"
 
 googlesheets4::gs4_auth(email = "milz.bea@gmail.com")
@@ -23,27 +26,39 @@ planilha_presentes <- googlesheets4::read_sheet(url_sheets) |>
     foto = glue::glue("<img src='{foto}' style='max-width: 100%;'>"),
                 status = dplyr::case_when(
                 status == "FALSE" ~ "TODO",
-                status == "TRUE" ~ "Já fomos presenteados! Agradecemos muito."))
+                status == "TRUE" ~ "Já fomos presenteados! Agradecemos muito."),
+    preco_cota = round(preco_cota))
 
 
 gerar_tabela_presentes <- function(tabela) {
   tabela |>
-    dplyr::select(-categoria,-opcao_1) |>
+    dplyr::select(-categoria,-opcao_1, -n_cotas) |>
     dplyr::relocate(foto, .before = tidyselect::everything()) |>
     reactable::reactable(
       sortable = TRUE,
       filterable = FALSE,
       columns = list(
-        item = reactable::colDef(name = "Item", width = 200),
+        item = reactable::colDef(name = "Item", minWidth = 200),
         estimativa_preco = reactable::colDef(
-          name = "Preço",
+          name = "Estimativa de preço",
           format = reactable::colFormat(
             prefix = "R$ ",
             separators = TRUE,
             locales = "pt"
           ),
-          width = 100
+          minWidth = 100
         ),
+
+         preco_cota = reactable::colDef(
+          name = "Valor sugerido para cota",
+          format = reactable::colFormat(
+            prefix = "R$ ",
+            separators = TRUE,
+            locales = "pt"
+          ),
+          minWidth = 100
+        ),
+        
         foto = reactable::colDef(
           name = "Foto",
           html = TRUE
@@ -52,42 +67,21 @@ gerar_tabela_presentes <- function(tabela) {
           html = TRUE)
       )
     ) 
-    
-  
-
-
 
 }
 
-
-# item_lista <- function(linha) {
-#   glue::glue("![{linha$item}]({linha$foto}){group='{linha$categoria}'} <br>")
-# }
-
 ```
 
-
-
+```{r include=FALSE}
 ## Utensílios domésticos
-
-
-```{r}
-planilha_presentes |> 
-  dplyr::filter(categoria == "utensilios_domesticos") |> 
-  gerar_tabela_presentes()
-```
-
-
+# planilha_presentes |> 
+#   dplyr::filter(categoria == "utensilios_domesticos") |> 
+#   gerar_tabela_presentes()
 ## Cama, mesa e banho
-
-
-```{r}
-planilha_presentes |> 
-  dplyr::filter(categoria == "cama_mesa_banho") |> 
-  gerar_tabela_presentes()
+# planilha_presentes |> 
+#   dplyr::filter(categoria == "cama_mesa_banho") |> 
+#   gerar_tabela_presentes()
 ```
-
-
 
 ## Mimos para a Noiva
 
@@ -106,9 +100,16 @@ planilha_presentes |>
   gerar_tabela_presentes()
 ```
 
+## Eletroportáteis
+
+```{r}
+planilha_presentes |> 
+  dplyr::filter(categoria == "eletroportateis") |> 
+  gerar_tabela_presentes()
+```
+
 
 ## Móveis
-
 
 ```{r}
 planilha_presentes |> 
@@ -117,7 +118,6 @@ planilha_presentes |>
 ```
 
 ## Eletrodomésticos
-
 
 ```{r}
 planilha_presentes |> 
