--- a/lista-de-presentes.qmd
+++ b/lista-de-presentes.qmd
@@ -10,7 +10,7 @@ knitr:
 toc: false
 ---
 
-Esta lista de presentes é feita de produtos fictícios. Cada item ou cota representa um valor que será convertido em dinheiro.
+Esta lista de presentes é feita de produtos fictícios. Cada item representa um valor que será convertido em dinheiro.
 
 Lembre-se que o presente é completamente opcional! O que mais queremos é a presença de pessoas queridas e que torcem pela nossa felicidade!
 
@@ -41,7 +41,7 @@ planilha_presentes <- googlesheets4::read_sheet(url_sheets) |>
 
 gerar_tabela_presentes <- function(tabela) {
   tabela |>
-    dplyr::select(-categoria,-opcao_1, -n_cotas) |>
+    dplyr::select(-categoria,-opcao_1, -n_cotas, -preco_cota) |>
     dplyr::relocate(foto, .before = tidyselect::everything()) |>
     reactable::reactable(
       sortable = TRUE,
@@ -59,15 +59,15 @@ gerar_tabela_presentes <- function(tabela) {
           minWidth = 100
         ),
 
-         preco_cota = reactable::colDef(
-          name = "Valor sugerido para cota",
-          format = reactable::colFormat(
-            prefix = "R$ ",
-            separators = TRUE,
-            locales = "pt"
-          ),
-          minWidth = 100
-        ),
+        #  preco_cota = reactable::colDef(
+        #   name = "Valor sugerido para cota",
+        #   format = reactable::colFormat(
+        #     prefix = "R$ ",
+        #     separators = TRUE,
+        #     locales = "pt"
+        #   ),
+        #   minWidth = 100
+        # ),
         
         foto = reactable::colDef(
           name = "Foto",
