--- a/galeria.qmd
+++ b/galeria.qmd
@@ -10,7 +10,9 @@ knitr:
 toc: false
 ---
 
-Fala se esse casal não é muito fofo? Clique para abrir o álbum! Se quiser, você também pode ver no <a href="https://photos.app.goo.gl/hb3acxd5F6paPSYS9" target="_blank">Google Photos por aqui</a>.
+Fala se esse casal não é muito fofo? Clique para abrir o álbum! 
+
+Se quiser, você também pode ver no <a href="https://photos.app.goo.gl/hb3acxd5F6paPSYS9" target="_blank">Google Photos por aqui</a>.
 
 ::: {layout-ncol=3}
 
