tentando fazer funcionar o quarto profile

--- a/index.qmd
+++ b/index.qmd
@@ -6,9 +6,18 @@ lightbox: auto
 toc: false
 ---
 
+
+::: {.content-visible when-profile="portugues"}
 ## Save the Date
 
 **Data:** 14/10/2023 às 10h00
 
 Em breve mais informações sobre o casamento da Bea e do Ju!
+:::
 
+
+::: {.content-visible when-profile="english"}
+## Save the Date
+
+**Date:** October 14th 2023, 10h.
+:::
