--- a/index.qmd
+++ b/index.qmd
@@ -20,4 +20,6 @@ Em breve mais informações sobre o casamento da Bea e do Ju!
 ## Save the Date
 
 **Date:** October 14th 2023, 10h.
+
+More information soon!
 :::
