--- a/cerimonia.qmd
+++ b/cerimonia.qmd
@@ -1,5 +1,5 @@
 ---
-title: "Cerimônia e Festa"
+# title: "Cerimônia e Festa"
 filters:
   - lightbox
 lightbox: auto
@@ -10,19 +10,35 @@ knitr:
 toc: false
 ---
 
+::: {.content-visible when-profile="portugues"}
+# Cerimônia e festa
 A cerimônia e a festa de casamento acontecerão no Sítio São Jorge - Demarchi, que fica em São Bernardo do Campo - SP.
+:::
+
+::: {.content-visible when-profile="english"}
+# Ceremony and Wedding party
+The ceremony and wedding party will take place at Sítio São Jorge - Demarchi, located in São Bernardo do Campo - São Paulo, Brazil.
+:::
 
 <center>
 
 ::: {layout="[[1,1]]"}
-![Cerimônia - Sítio São Jorge - Demarchi](images/demarchi.jpeg){group="espaco"}
+![Cerimônia/Ceremony - Sítio São Jorge - Demarchi](images/demarchi.jpeg){group="espaco"}
 
-![Festa - Sítio São Jorge - Demarchi](images/demarchi2.jpeg){group="espaco"}
+![Festa/Wedding Party - Sítio São Jorge - Demarchi](images/demarchi2.jpeg){group="espaco"}
 :::
 
 </center>
 
+
+
+::: {.content-visible when-profile="portugues"}
 ## Mapa
+:::
+
+::: {.content-visible when-profile="english"}
+## Map
+:::
 
 <center>
 
@@ -31,3 +47,4 @@ A cerimônia e a festa de casamento acontecerão no Sítio São Jorge - Demarchi
 </iframe>
 
 <center>
+
