--- a/galeria.qmd
+++ b/galeria.qmd
@@ -15,6 +15,8 @@ toc: false
 
 # Galeria de fotos
 
+![](images/floral.jpg){fig-align="center" style="margin-top: -30px;"}
+
 Fala se esse casal não é muito fofo? Clique na foto para ampliar! 
 
 Se quiser, você também pode ver no <a href="https://photos.app.goo.gl/hb3acxd5F6paPSYS9" target="_blank">Google Photos por aqui</a>.
@@ -24,6 +26,8 @@ Se quiser, você também pode ver no <a href="https://photos.app.goo.gl/hb3acxd5
 ::: {.content-visible when-profile="english"}
 
 # Photos
+
+![](images/floral.jpg){fig-align="center" style="margin-top: -30px;"}
 
 Isn't this couple cute? Click on the photo to zoom it!
 
