--- a/index.qmd
+++ b/index.qmd
@@ -2,9 +2,13 @@
 title: "Beatriz & Julio"
 filters:
   - lightbox
-lightbox: auto
+lightbox: false
 toc: false
 ---
+
+
+![](images/floral.jpg){fig-align="center" style="margin-top: -30px;"}
+
 
 
 ::: {.content-visible when-profile="portugues"}
@@ -14,7 +18,6 @@ toc: false
 
 Em breve mais informações sobre o casamento da Bea e do Ju!
 :::
-
 
 ::: {.content-visible when-profile="english"}
 ## Save the Date
