adiciona categoria money

--- a/presentes.qmd
+++ b/presentes.qmd
@@ -254,3 +254,12 @@ Caso queira enviar algum valor diferente dos valores dos itens acima, ou deixar 
 
 
 :::
+
+
+::: {.content-visible when-profile="english"}
+
+##  Money
+
+If you want to gift us a iten, or leave the choice for us, you can transfer the money with [Paypal](https://www.paypal.com/) to: **beatriz.milz@hotmail.com**".
+:::
+
