--- a/presentes.qmd
+++ b/presentes.qmd
@@ -18,7 +18,7 @@ toc: true
 
 Esta lista de presentes é feita de produtos desejados Cada item representa um valor que será convertido em dinheiro.
 
-Lembre-se que o presente é completamente opcional! O que mais queremos é a presença de pessoas queridas e que torcem pela nossa felicidade!
+Lembre-se que **o presente é completamente opcional**! O que mais queremos é a presença de pessoas queridas e que torcem pela nossa felicidade!
 :::
 
 
@@ -29,7 +29,7 @@ Lembre-se que o presente é completamente opcional! O que mais queremos é a pre
 
 This gift list is made up of itens that we need or desire. Each item represents a value that will be converted into cash.
 
-Remember that the gift is completely optional! What we most want is the presence of people that are dear to us, and who root for our happiness!
+Remember that **the gift is completely optional**! What we most want is the presence of people that are dear to us, and who root for our happiness!
 :::
 
 
