--- a/cerimonia.qmd
+++ b/cerimonia.qmd
@@ -16,6 +16,8 @@ toc: false
 ![](images/floral.jpg){fig-align="center" style="margin-top: -30px;"}
 
 A cerimônia e a festa de casamento acontecerão no Sítio São Jorge - Demarchi, que fica em São Bernardo do Campo - SP.
+
+**Data:** 14/10/2023 às 10h00
 :::
 
 ::: {.content-visible when-profile="english"}
@@ -24,6 +26,8 @@ A cerimônia e a festa de casamento acontecerão no Sítio São Jorge - Demarchi
 ![](images/floral.jpg){fig-align="center" style="margin-top: -30px;"}
 
 The ceremony and wedding party will take place at Sítio São Jorge - Demarchi, located in São Bernardo do Campo - São Paulo, Brazil.
+
+**Date:** October 14th 2023, 10h AM.
 :::
 
 <center>
