--- a/mural-mensagens.qmd
+++ b/mural-mensagens.qmd
@@ -12,4 +12,52 @@ toc: false
 
 ![](images/floral.jpg){fig-align="center" style="margin-top: -30px;"}
 
-Em breve!
+
+<div id="message-board"></div>
+
+<script>
+
+async function fetchCSVData(url) {
+    const response = await fetch(url);
+    const text = await response.text();
+    const data = text.split('\n').slice(1).map(row => {
+        const columns = row.split(',');
+        return {
+            username: columns[1].trim(),
+            message: columns[3].trim(),
+        };
+    });
+
+    return data;
+}
+
+function createMessageElement(messageData) {
+    const messageElement = document.createElement('div');
+    messageElement.classList.add('message');
+
+    const usernameElement = document.createElement('strong');
+    usernameElement.textContent = messageData.username;
+    messageElement.appendChild(usernameElement);
+
+    const messageContentElement = document.createElement('p');
+    messageContentElement.textContent = messageData.message;
+    messageElement.appendChild(messageContentElement);
+
+    return messageElement;
+}
+
+async function initMessageBoard() {
+    const csvUrl = 'https://docs.google.com/spreadsheets/d/e/2PACX-1vRWFesiPBWEnJDi61t0DR-m8emzaUgh1GPE031f6G4abji_Qg8UcPLIH980CUUQTtF6gpFtfNfHXJSP/pub?gid=1975612460&single=true&output=csv';
+    const messages = await fetchCSVData(csvUrl);
+
+    const messageBoard = document.getElementById('message-board');
+    messages.forEach(message => {
+        const messageElement = createMessageElement(message);
+        messageBoard.appendChild(messageElement);
+    });
+}
+
+initMessageBoard();
+
+
+</script>
