--- a/index.qmd
+++ b/index.qmd
@@ -6,7 +6,7 @@ lightbox: false
 toc: false
 ---
 
-![](images/floral.jpg){fig-align="center" style="margin-top: -30px;"}
+![](images/floral.jpg){.nolightbox fig-align="center" style="margin-top: -30px;"}
 
 ::: {.grid}
 
