--- a/confirmar-presenca.qmd
+++ b/confirmar-presenca.qmd
@@ -10,6 +10,6 @@ knitr:
 toc: false
 ---
 
-![](images/floral.jpg){fig-align="center" style="margin-top: -30px;"}
+![](images/floral.jpg){.nolightbox fig-align="center" style="margin-top: -30px;"}
 
 Em breve!
